Disclaimer Bug Fix
Fixed issue where disclaimer button was clickable even when invisible. Altered start text to be more readable/clear.

--- a/infoBoxesStyle.css
+++ b/infoBoxesStyle.css
@@ -63,6 +63,10 @@ This stylesheet is responsible for styleing the information text boxes/modals.
         font-size: small;
         line-height: 2em;
         font-family: "Helvetica", Arial, sans-serif;
+        /*width: 100px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;*/
     }
 
     .modalcontent > a {
